# bip174.org

./: .gitignore  Cargo.toml  README.md  bootstrap.js  build.rs  entry.js  package.json  style.scss  template.html  webpack.config.js
.github/workflows/: check.yml
netlify/: index.html
src/: app.rs  fields.rs  history.rs  io_boxes.rs  lib.rs  navbar.rs
src/bootstrap/: mod.rs
src/io_boxes/: box_field.rs  input_boxes.rs  mod.rs  output_boxes.rs
static/: index.html  style.scss
