[package]
name = "bip174"
version = "0.1.0"
authors = [
    "Alekos Filini <alekos.filini@gmail.com>",
    "Daniela Brozzoni <danielabrozzoni@protonmail.com>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.75"
wasm-logger = "0.2"
wee_alloc = "0.4.5"
yew = "0.18"
bitcoin = { version = "0.27", features = ["base64"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.52"
features = [
  "KeyboardEvent",
  "CssStyleDeclaration",
]

[profile.release]
opt-level = "z"  # Optimize for size.
codegen-units = 1
lto = true
panic = "abort"
